# imagespec

./: .gitattributes  .gitignore  MANIFEST.in  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: authoring.md  elements.md  migration.md
examples/: compare_dither.py  generate_dither_labels.py  generate_element_previews.py  generate_showcase.py  smoke_test.py
scripts/: build_fontawesome_assets.py  inject_element_previews.py
src/imagespec/: __init__.py  classutil.py  colors.py  context.py  core.py  dispatch.py  dither.py  exceptions.py  registry.py  resolvers.py  state.py  utils.py
src/imagespec/elements/: __init__.py  charts.py  codes.py  layout.py  media.py  shapes.py  text.py  widgets.py
src/imagespec/fonts/: OFL.txt  README.md
src/imagespec/icons/: LICENSE  README.md  fontawesome-free_meta.json
tests/: conftest.py  test_colors.py  test_core.py  test_dither.py  test_elements.py  test_errors.py  test_features.py  test_layout.py  test_plot.py  test_resolvers.py  test_text_fit.py
